fix unifi controller deployment